oxiplate-derive/tests/broken/if/stray-elseif.stderr
error: Unexpected 'elseif' statement
 --> tests/broken/if/stray-elseif.rs:4:24
  |
4 | #[oxiplate_inline("{%- elseif should_do -%}{{ action }}")]
  |                        ^^^^^^
